--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -10,7 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.4.0",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
